Finished JavaScript Filter function. Also finished populating data for $ and 10138$ options.

--- a/index.html
+++ b/index.html
@@ -41,22 +41,13 @@
                 <input type="radio" name="guitarGenre" id="rock" value="Rock">
                 <label for="rock">Rock</label>
                 <input type="radio" name="guitarGenre" id="blues" value="Blues">
-                <label for="guitarGenreBlues">Blues</label>
+                <label for="blues">Blues</label>
                 <input type="radio" name="guitarGenre" id="country" value="Country">
                 <label for="country">Country</label>
                 <input type="radio" name="guitarGenre" id="metal" value="Metal">
                 <label for="metal">Metal</label>
                 <input type="radio" name="guitarGenre" id="spaceAge" value="SpaceAge">
                 <label for="spaceAge">Space Age</label>
-            </fieldset>
-            <fieldset class="guitar__Usage">
-                <h2>What is your goal when buying a guitar?</h2>
-                <input type="radio" name="guitarGenre" id="rock" value="Rock">
-                <label for="guitarGenreRock">Rock</label>
-                <input type="radio" name="guitarGenre" id="blues" value="Blues">
-                <label for="guitarGenreBlues">Blues</label>
-                <input type="radio" name="guitarGenre" id="country" value="Country">
-                <label for="guitarGenreCountry">Country</label>
             </fieldset>
             <div class="generator__submit">
                 <input type="submit" value="Find My Axe!">
