Generator now displays correct answers and has a If statement to cover any deviations. Good to start CSS styling.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
             </div>
         </form>
     </div>
+    <!-- Below is jQuery! -->
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
+    <!-- Below is Sweet Alert!-->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- Below is Custom JavaScript -->
     <script src="./scripts/scripts.js"></script>    
 </body>
 </html>
