Started into general layout and stylings. Set up base component.

--- a/index.html
+++ b/index.html
@@ -8,54 +8,60 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <div class="generator__landing">
-            <h1>Guitar Generator</h1>
-            <h2>Finding a guitar is hard, so let us help you find your six-string-soulmate!</h2>
-            <div class="landing-start">
-                <input type="submit" value="Start my Guitar finding expedition!">
+    <header>
+        <div class="wrapper">
+            <div class="generator__landing">
+                <h1>Guitar Generator</h1>
+                <h2>Finding a guitar is hard, so let us help you find your six-string-soulmate!</h2>
+                <div class="landing-start">
+                    <input type="submit" value="Start my Guitar finding expedition!">
+                </div>
+            </div>
+        </div>    
+    </header>
+    <main>
+        <div class="wrapper">
+            <div class="guitar__generator">
+                <form action="">
+                    <fieldset class="guitar__price">
+                        <h2>How much do you want to spend?</h2>
+                        <input type="radio" name="guitarPrice" id="price$" value="$">
+                        <label for="price$">$</label>
+                        <input type="radio" name="guitarPrice" id="price$$" value="$$">
+                        <label for="price$$">$$</label>
+                        <input type="radio" name="guitarPrice" id="price$$$" value="$$$">
+                        <label for="price$$$">$$$</label>
+                    </fieldset>
+                    <fieldset class="guitar__skill">
+                        <h2>What is your skill level?</h2>
+                        <input type="radio" name="guitarSkill" id="beginner" value="Beginner">
+                        <label for="beginner">Beginner</label>
+                        <input type="radio" name="guitarSkill" id="intermediate" value="Intermediate">
+                        <label for="intermediate">Intermediate</label>
+                        <input type="radio" name="guitarSkill" id="expert" value="Expert">
+                        <label for="expert">Expert</label>
+                    </fieldset>
+                    <fieldset class="guitar__Genre">
+                        <h2>What type of music do you want to play?</h2>
+                        <input type="radio" name="guitarGenre" id="rock" value="Rock">
+                        <label for="rock">Rock</label>
+                        <input type="radio" name="guitarGenre" id="blues" value="Blues">
+                        <label for="blues">Blues</label>
+                        <input type="radio" name="guitarGenre" id="country" value="Country">
+                        <label for="country">Country</label>
+                        <input type="radio" name="guitarGenre" id="metal" value="Metal">
+                        <label for="metal">Metal</label>
+                        <input type="radio" name="guitarGenre" id="spaceAge" value="SpaceAge">
+                        <label for="spaceAge">Space Age</label>
+                    </fieldset>
+                    <div class="generator__submit">
+                        <input type="submit" value="Find My Axe!">
+                    </div>
+                </form>
+                <div class="guitar-showcase"></div>
             </div>
         </div>
-        <div class="guitar__generator">
-            <form action="">
-                <fieldset class="guitar__price">
-                    <h2>How much do you want to spend?</h2>
-                    <input type="radio" name="guitarPrice" id="price$" value="$">
-                    <label for="price$">$</label>
-                    <input type="radio" name="guitarPrice" id="price$$" value="$$">
-                    <label for="price$$">$$</label>
-                    <input type="radio" name="guitarPrice" id="price$$$" value="$$$">
-                    <label for="price$$$">$$$</label>
-                </fieldset>
-                <fieldset class="guitar__skill">
-                    <h2>What is your skill level?</h2>
-                    <input type="radio" name="guitarSkill" id="beginner" value="Beginner">
-                    <label for="beginner">Beginner</label>
-                    <input type="radio" name="guitarSkill" id="intermediate" value="Intermediate">
-                    <label for="intermediate">Intermediate</label>
-                    <input type="radio" name="guitarSkill" id="expert" value="Expert">
-                    <label for="expert">Expert</label>
-                </fieldset>
-                <fieldset class="guitar__Genre">
-                    <h2>What type of music do you want to play?</h2>
-                    <input type="radio" name="guitarGenre" id="rock" value="Rock">
-                    <label for="rock">Rock</label>
-                    <input type="radio" name="guitarGenre" id="blues" value="Blues">
-                    <label for="blues">Blues</label>
-                    <input type="radio" name="guitarGenre" id="country" value="Country">
-                    <label for="country">Country</label>
-                    <input type="radio" name="guitarGenre" id="metal" value="Metal">
-                    <label for="metal">Metal</label>
-                    <input type="radio" name="guitarGenre" id="spaceAge" value="SpaceAge">
-                    <label for="spaceAge">Space Age</label>
-                </fieldset>
-                <div class="generator__submit">
-                    <input type="submit" value="Find My Axe!">
-                </div>
-            </form>
-            <div class="guitar-showcase"></div>
-        </div>
-    </div>
+    </main>    
     <!-- Below is jQuery! -->
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
     <!-- Below is Sweet Alert!-->
