JavaScript shows gutiar selects and images. Improvements on label selection and css additions during it, but you need to fix that. Reset button finished. Make sure you add smooth scroll.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <header>
+    <header id="beginning">
         <div class="wrapper">
             <div class="generator__landing">
                 <h1>Guitar Generator</h1>
@@ -58,10 +58,14 @@
                         <input type="submit" value="Find My Axe!">
                     </div>
                 </form>
-                <div class="guitar-showcase"></div>
             </div>
         </div>
-    </main>    
+    </main>  
+    <section>
+        <div class="wrapper">
+            <div class="guitar-showcase"></div>
+        </div>
+    </section>  
     <!-- Below is jQuery! -->
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
     <!-- Below is Sweet Alert!-->
