JS Complete. Styling and HTML Complete. Responsive in Progress.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Guitar Generator</title>
+   <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:400,700|Righteous" rel="stylesheet">
+    <!--font-family: 'Righteous', cursive; 
+        font-family: 'Josefin Slab', serif;-->
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -12,65 +15,82 @@
         <div class="wrapper">
             <div class="generator__landing">
                 <h1>Guitar Generator</h1>
-                <h2>Finding a guitar is hard, so let us help you find your six-string-soulmate!</h2>
+                <h2>Finding a guitar is hard, so let me find your six-string-soulmate</h2>
                 <div class="landing-start">
-                    <input type="submit" value="Start my Guitar finding expedition!">
+                    <a href="#guitarGen">Start Your Sonic Journey</a>
                 </div>
             </div>
         </div>    
     </header>
     <main>
-        <div class="wrapper">
-            <div class="guitar__generator">
-                <form action="">
-                    <fieldset class="guitar__price">
-                        <h2>How much do you want to spend?</h2>
-                        <input type="radio" name="guitarPrice" id="price$" value="$">
-                        <label for="price$">$</label>
-                        <input type="radio" name="guitarPrice" id="price$$" value="$$">
-                        <label for="price$$">$$</label>
-                        <input type="radio" name="guitarPrice" id="price$$$" value="$$$">
-                        <label for="price$$$">$$$</label>
-                    </fieldset>
-                    <fieldset class="guitar__skill">
-                        <h2>What is your skill level?</h2>
-                        <input type="radio" name="guitarSkill" id="beginner" value="Beginner">
-                        <label for="beginner">Beginner</label>
-                        <input type="radio" name="guitarSkill" id="intermediate" value="Intermediate">
-                        <label for="intermediate">Intermediate</label>
-                        <input type="radio" name="guitarSkill" id="expert" value="Expert">
-                        <label for="expert">Expert</label>
-                    </fieldset>
-                    <fieldset class="guitar__Genre">
-                        <h2>What type of music do you want to play?</h2>
-                        <input type="radio" name="guitarGenre" id="rock" value="Rock">
-                        <label for="rock">Rock</label>
-                        <input type="radio" name="guitarGenre" id="blues" value="Blues">
-                        <label for="blues">Blues</label>
-                        <input type="radio" name="guitarGenre" id="country" value="Country">
-                        <label for="country">Country</label>
-                        <input type="radio" name="guitarGenre" id="metal" value="Metal">
-                        <label for="metal">Metal</label>
-                        <input type="radio" name="guitarGenre" id="spaceAge" value="SpaceAge">
-                        <label for="spaceAge">Space Age</label>
-                    </fieldset>
-                    <div class="generator__submit">
-                        <input type="submit" value="Find My Axe!">
-                    </div>
-                </form>
+        <!-- GENERATOR SECTION STARTS HERE! -->
+        <section class="generator">
+            <div class="wrapper">
+                <div class="guitar__generator" id="guitarGen">
+                    <form action="">
+                        <fieldset class="guitar__price">
+                            <h2>How much do you want to spend?</h2>
+                            <div class="guitar__price__choices">
+                                <input type="radio" name="guitarPrice" id="price$" value="$">
+                                <label for="price$">$</label>
+                                <input type="radio" name="guitarPrice" id="price$$" value="$$">
+                                <label for="price$$">$$</label>
+                                <input type="radio" name="guitarPrice" id="price$$$" value="$$$">
+                                <label for="price$$$">$$$</label>
+                            </div>
+                        </fieldset>
+                        <fieldset class="guitar__skill">
+                            <h2>What is your skill level?</h2>
+                            <div class="guitar__skill__choices">
+                                <input type="radio" name="guitarSkill" id="beginner" value="Beginner">
+                                <label for="beginner">Beginner</label>
+                                <input type="radio" name="guitarSkill" id="intermediate" value="Intermediate">
+                                <label for="intermediate">Intermediate</label>
+                                <input type="radio" name="guitarSkill" id="expert" value="Expert">
+                                <label for="expert">Expert</label>
+                            </div>
+                        </fieldset>
+                        <fieldset class="guitar__Genre">
+                            <h2>What type of music do you want to play?</h2>
+                             <div class="guitar__Genre__choices">
+                                <input type="radio" name="guitarGenre" id="rock" value="Rock">
+                                <label for="rock">Rock</label>
+                                <input type="radio" name="guitarGenre" id="blues" value="Blues">
+                                <label for="blues">Blues</label>
+                                <input type="radio" name="guitarGenre" id="country" value="Country">
+                                <label for="country">Country</label>
+                                <input type="radio" name="guitarGenre" id="metal" value="Metal">
+                                <label for="metal">Metal</label>
+                                <input type="radio" name="guitarGenre" id="spaceAge" value="SpaceAge">
+                                <label for="spaceAge">Space Age</label>
+                            </div>
+                        </fieldset>
+                        <div class="generator__submit">
+                            <input type="submit" value="Find My Axe!">
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>
+        </section>
+        <!-- GENERATOR SECTION ENDS HERE! -->
+        <!-- RESULTS SECTION STARTS HERE! -->
+        <section class="showcase">
+            <div class="wrapper">
+                <div class="guitar-showcase"></div>
+            </div>
+        </section>  
+        <!-- RESULTS SECTION ENDS HERE! -->
     </main>  
-    <section>
-        <div class="wrapper">
-            <div class="guitar-showcase"></div>
-        </div>
-    </section>  
+    <footer>
+        <h3>Created By: Joey Deol</h3>
+    </footer>
     <!-- Below is jQuery! -->
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
+    <!-- Below is SmoothScroll! -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.1.2/jquery.smooth-scroll.min.js"></script>
     <!-- Below is Sweet Alert!-->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <!-- Below is Custom JavaScript -->
+    <!-- Below is Custom JavaScript! -->
     <script src="./scripts/scripts.js"></script>    
 </body>
 </html>
